// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm with rememberMeLabel and no rememberMeAriaLabel generates console error 1`] = `
.pf-u-mr-lg-on-md.pf-u-px-xl.pf-u-align-self-stretch.pf-u-align-self-flex-start-on-md {
  display: block;
  padding-right: 2rem;
  padding-left: 2rem;
}
.pf-u-m-md.pf-u-align-items-center.pf-u-display-flex {
  display: flex;
  align-items: center;
  margin: 1rem;
}
.pf-u-text-align-center.pf-u-text-align-left-on-md {
  display: block;
  text-align: center;
}
.pf-u-display-flex.pf-u-align-items-center.pf-u-flex-direction-column.pf-u-flex-direction-row-on-md {
  display: flex;
  flex-direction: column;
  align-items: center;
}

<Form
  className=""
  isHorizontal={false}
>
  <FormGroup
    className=""
    fieldId="pf-login-username-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      mame="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="pf-login-password-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </FormGroup>
  <ActionGroup
    className="pf-u-display-flex pf-u-align-items-center pf-u-flex-direction-column pf-u-flex-direction-row-on-md"
  >
    <Button
      aria-label={null}
      className="pf-u-mr-lg-on-md pf-u-px-xl pf-u-align-self-stretch pf-u-align-self-flex-start-on-md"
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Button>
    <div
      className="pf-u-text-align-center pf-u-text-align-left-on-md"
    >
      <Checkbox
        aria-label=""
        checked={false}
        className="pf-u-m-md pf-u-align-items-center pf-u-display-flex"
        id="pf-login-remember-me-id"
        isChecked={null}
        isDisabled={false}
        isValid={true}
        label="remember me"
        onChange={[MockFunction]}
      />
    </div>
  </ActionGroup>
</Form>
`;

exports[`LoginForm with rememberMeLabel and rememberMeAriaLabel does not generates console error 1`] = `
.pf-u-mr-lg-on-md.pf-u-px-xl.pf-u-align-self-stretch.pf-u-align-self-flex-start-on-md {
  display: block;
  padding-right: 2rem;
  padding-left: 2rem;
}
.pf-u-m-md.pf-u-align-items-center.pf-u-display-flex {
  display: flex;
  align-items: center;
  margin: 1rem;
}
.pf-u-text-align-center.pf-u-text-align-left-on-md {
  display: block;
  text-align: center;
}
.pf-u-display-flex.pf-u-align-items-center.pf-u-flex-direction-column.pf-u-flex-direction-row-on-md {
  display: flex;
  flex-direction: column;
  align-items: center;
}

<Form
  className=""
  isHorizontal={false}
>
  <FormGroup
    className=""
    fieldId="pf-login-username-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      mame="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="pf-login-password-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </FormGroup>
  <ActionGroup
    className="pf-u-display-flex pf-u-align-items-center pf-u-flex-direction-column pf-u-flex-direction-row-on-md"
  >
    <Button
      aria-label={null}
      className="pf-u-mr-lg-on-md pf-u-px-xl pf-u-align-self-stretch pf-u-align-self-flex-start-on-md"
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Button>
    <div
      className="pf-u-text-align-center pf-u-text-align-left-on-md"
    >
      <Checkbox
        aria-label="remember me"
        checked={false}
        className="pf-u-m-md pf-u-align-items-center pf-u-display-flex"
        id="pf-login-remember-me-id"
        isChecked={null}
        isDisabled={false}
        isValid={true}
        label="remember me"
        onChange={[MockFunction]}
      />
    </div>
  </ActionGroup>
</Form>
`;

exports[`should render Login form 1`] = `
.pf-u-mr-lg-on-md.pf-u-px-xl.pf-u-align-self-stretch.pf-u-align-self-flex-start-on-md {
  display: block;
  padding-right: 2rem;
  padding-left: 2rem;
}
.pf-u-text-align-center.pf-u-text-align-left-on-md {
  display: block;
  text-align: center;
}
.pf-u-display-flex.pf-u-align-items-center.pf-u-flex-direction-column.pf-u-flex-direction-row-on-md {
  display: flex;
  flex-direction: column;
  align-items: center;
}

<Form
  className=""
  isHorizontal={false}
>
  <FormGroup
    className=""
    fieldId="pf-login-username-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Username"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-username-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      mame="pf-login-username-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="pf-login-password-id"
    helperText=""
    helperTextInvalid=""
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Password"
  >
    <TextInput
      aria-label={null}
      className=""
      id="pf-login-password-id"
      isAlt={false}
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      value=""
    />
  </FormGroup>
  <ActionGroup
    className="pf-u-display-flex pf-u-align-items-center pf-u-flex-direction-column pf-u-flex-direction-row-on-md"
  >
    <Button
      aria-label={null}
      className="pf-u-mr-lg-on-md pf-u-px-xl pf-u-align-self-stretch pf-u-align-self-flex-start-on-md"
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Button>
    <div
      className="pf-u-text-align-center pf-u-text-align-left-on-md"
    />
  </ActionGroup>
</Form>
`;
